--- a/MemeThing/Views/Waiting.storyboard
+++ b/MemeThing/Views/Waiting.storyboard
@@ -20,6 +20,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="54"/>
                                 <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jS9-4s-OWv">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B3v-Lj-bVa">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <color key="tintColor" name="purpleAccent"/>
@@ -41,10 +45,6 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jS9-4s-OWv">
-                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[waiting label]" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uS-Iu-RsD" customClass="MemeThingLabelBackgroundLight" customModule="MemeThing" customModuleProvider="target">
                                 <rect key="frame" x="153.5" y="156" width="107.5" height="50"/>
                                 <constraints>
@@ -77,18 +77,18 @@
                             <constraint firstItem="fVo-U2-gzk" firstAttribute="top" relation="greaterThanOrEqual" secondItem="2uS-Iu-RsD" secondAttribute="bottom" constant="12" id="7hZ-6k-kt1"/>
                             <constraint firstItem="B3v-Lj-bVa" firstAttribute="trailing" secondItem="KnZ-49-nEF" secondAttribute="trailing" id="DkW-8E-AYF"/>
                             <constraint firstItem="2zm-D0-H3U" firstAttribute="top" secondItem="VjZ-lY-irn" secondAttribute="top" id="Efl-st-KFg"/>
+                            <constraint firstItem="jS9-4s-OWv" firstAttribute="trailing" secondItem="KnZ-49-nEF" secondAttribute="trailing" id="FG2-X9-ghv"/>
                             <constraint firstItem="KnZ-49-nEF" firstAttribute="trailing" secondItem="2zm-D0-H3U" secondAttribute="trailing" id="SKU-Le-5kW"/>
                             <constraint firstItem="fVo-U2-gzk" firstAttribute="height" secondItem="VjZ-lY-irn" secondAttribute="height" multiplier="0.4" id="UiJ-05-tK6"/>
+                            <constraint firstItem="jS9-4s-OWv" firstAttribute="top" secondItem="B3v-Lj-bVa" secondAttribute="bottom" id="Wsf-HA-Z1z"/>
                             <constraint firstItem="2uS-Iu-RsD" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="fVo-U2-gzk" secondAttribute="leading" id="ZLl-Dj-Bxp"/>
-                            <constraint firstAttribute="bottom" secondItem="jS9-4s-OWv" secondAttribute="bottom" id="cSe-um-0SI"/>
+                            <constraint firstAttribute="bottom" secondItem="jS9-4s-OWv" secondAttribute="bottom" id="ZfL-t3-1Ty"/>
                             <constraint firstItem="fVo-U2-gzk" firstAttribute="width" secondItem="VjZ-lY-irn" secondAttribute="width" multiplier="0.8" id="gR4-zT-k8F"/>
                             <constraint firstItem="fVo-U2-gzk" firstAttribute="centerY" secondItem="KnZ-49-nEF" secondAttribute="centerY" priority="999" id="gTI-cS-PDe"/>
                             <constraint firstItem="B3v-Lj-bVa" firstAttribute="top" secondItem="KnZ-49-nEF" secondAttribute="top" id="hPO-6r-y3f"/>
                             <constraint firstItem="B3v-Lj-bVa" firstAttribute="top" secondItem="2zm-D0-H3U" secondAttribute="bottom" constant="-10" id="ib4-m5-2x8"/>
                             <constraint firstItem="fVo-U2-gzk" firstAttribute="centerX" secondItem="KnZ-49-nEF" secondAttribute="centerX" id="li3-tj-viK"/>
-                            <constraint firstItem="KnZ-49-nEF" firstAttribute="trailing" secondItem="jS9-4s-OWv" secondAttribute="trailing" id="niw-TB-Kks"/>
-                            <constraint firstItem="jS9-4s-OWv" firstAttribute="leading" secondItem="VjZ-lY-irn" secondAttribute="leading" id="oed-UH-vGL"/>
-                            <constraint firstItem="jS9-4s-OWv" firstAttribute="top" secondItem="B3v-Lj-bVa" secondAttribute="bottom" id="pGc-dZ-xg9"/>
+                            <constraint firstItem="jS9-4s-OWv" firstAttribute="leading" secondItem="KnZ-49-nEF" secondAttribute="leading" id="oAf-Wn-b0B"/>
                             <constraint firstItem="B3v-Lj-bVa" firstAttribute="leading" secondItem="KnZ-49-nEF" secondAttribute="leading" id="pwu-aJ-mCi"/>
                             <constraint firstItem="2uS-Iu-RsD" firstAttribute="centerY" secondItem="KnZ-49-nEF" secondAttribute="centerY" multiplier="0.4" priority="999" id="pz8-kn-4cF"/>
                             <constraint firstItem="2uS-Iu-RsD" firstAttribute="width" relation="lessThanOrEqual" secondItem="fVo-U2-gzk" secondAttribute="width" id="rjh-a0-QfO"/>
