--- a/MemeThing/Views/MainMenu.storyboard
+++ b/MemeThing/Views/MainMenu.storyboard
@@ -30,7 +30,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QmY-Sk-EIK" customClass="MemeThingButton" customModule="MemeThing" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="104" width="331" height="92"/>
                                         <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="17"/>
-                                        <state key="normal" title="Resume Game"/>
+                                        <state key="normal" title="Games"/>
                                         <connections>
                                             <segue destination="v4r-b0-bVp" kind="show" id="L3Y-9C-9e1"/>
                                         </connections>
@@ -67,17 +67,39 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1.circle.fill" catalog="system" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hIS-C4-ALm" customClass="BadgeImage" customModule="MemeThing" customModuleProvider="target">
+                                <rect key="frame" x="31.5" y="279.5" width="35" height="34"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" name="redAccent"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="B1B-Rz-ZN5"/>
+                                    <constraint firstAttribute="width" secondItem="hIS-C4-ALm" secondAttribute="height" multiplier="1:1" id="HG2-jI-b7v"/>
+                                </constraints>
+                            </imageView>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1.circle.fill" catalog="system" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pvZ-yU-S4c" customClass="BadgeImage" customModule="MemeThing" customModuleProvider="target">
+                                <rect key="frame" x="31.5" y="383.5" width="35" height="34"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" name="redAccent"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="H5o-oN-Ryz"/>
+                                    <constraint firstAttribute="width" secondItem="pvZ-yU-S4c" secondAttribute="height" multiplier="1:1" id="MQv-Ve-AHu"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" name="background"/>
                         <color key="tintColor" name="purpleAccent"/>
                         <constraints>
                             <constraint firstItem="dPK-ol-adM" firstAttribute="centerY" secondItem="AcR-df-SPv" secondAttribute="centerY" multiplier="0.25" priority="999" id="D87-pz-Sdt"/>
                             <constraint firstItem="gvR-q1-r0k" firstAttribute="width" secondItem="fis-jG-xff" secondAttribute="width" multiplier="0.8" priority="999" id="EgD-9g-Ro1"/>
+                            <constraint firstItem="hIS-C4-ALm" firstAttribute="leading" secondItem="QmY-Sk-EIK" secondAttribute="leading" constant="-10" id="ElW-KJ-KKq"/>
+                            <constraint firstItem="pvZ-yU-S4c" firstAttribute="leading" secondItem="U25-wd-vr0" secondAttribute="leading" constant="-10" id="H5K-B5-cXX"/>
                             <constraint firstItem="gvR-q1-r0k" firstAttribute="centerX" secondItem="AcR-df-SPv" secondAttribute="centerX" id="Hmv-Et-SUL"/>
                             <constraint firstItem="gvR-q1-r0k" firstAttribute="height" secondItem="fis-jG-xff" secondAttribute="height" multiplier="0.5" id="Mkt-zT-nAz"/>
                             <constraint firstItem="gvR-q1-r0k" firstAttribute="centerY" secondItem="AcR-df-SPv" secondAttribute="centerY" id="QwA-4S-w1U"/>
                             <constraint firstItem="gvR-q1-r0k" firstAttribute="top" relation="greaterThanOrEqual" secondItem="dPK-ol-adM" secondAttribute="bottom" constant="12" id="b9I-fO-4DD"/>
                             <constraint firstItem="dPK-ol-adM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vUO-Of-2dw" secondAttribute="leading" id="ekK-Aq-YI7"/>
+                            <constraint firstItem="pvZ-yU-S4c" firstAttribute="top" secondItem="U25-wd-vr0" secondAttribute="top" constant="-10" id="frM-aG-aS6"/>
+                            <constraint firstItem="hIS-C4-ALm" firstAttribute="top" secondItem="QmY-Sk-EIK" secondAttribute="top" constant="-10" id="qHD-3u-BJc"/>
                             <constraint firstItem="dPK-ol-adM" firstAttribute="centerX" secondItem="AcR-df-SPv" secondAttribute="centerX" id="xBA-4Z-AzW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="AcR-df-SPv"/>
@@ -86,6 +108,8 @@
                         <barButtonItem key="backBarButtonItem" title="Back" id="WEF-qD-cpU"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="friendsBadgeImage" destination="pvZ-yU-S4c" id="mqJ-Z6-hMA"/>
+                        <outlet property="gamesBadgeImage" destination="hIS-C4-ALm" id="EGG-si-idv"/>
                         <outlet property="welcomeLabel" destination="dPK-ol-adM" id="f03-WS-cgw"/>
                     </connections>
                 </viewController>
@@ -158,11 +182,15 @@
         </scene>
     </scenes>
     <resources>
+        <image name="1.circle.fill" catalog="system" width="128" height="121"/>
         <namedColor name="background">
             <color red="0.0" green="0.11372549019607843" blue="0.47843137254901963" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="purpleAccent">
             <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="redAccent">
+            <color red="1" green="0.21568627450980393" blue="0.11764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
